--- a/whatsapp with fire-base/profile/profile.css
+++ b/whatsapp with fire-base/profile/profile.css
@@ -1,6 +1,7 @@
  *{
 /* overflow: hidden !important; */
-box-sizing: border-box !important;} 
+box-sizing: border-box !important;
+} 
 
  body{
     background-image: linear-gradient(180deg,#dddbd1,#d2dbdc) !important;
@@ -15,7 +16,7 @@ box-sizing: border-box !important;}
 
 .fullchat{
          width: 100% !important;
-         height: 100vh !important;
+         height: 100% !important;
           /* margin-top: 25px !important;  */
 
 }
@@ -64,7 +65,7 @@ box-sizing: border-box !important;}
     background-image: url(/images/chatback.png);
     width: 100%;
     height: 87.1vh;
-    position: relative;
+    /* position: relative; */
 }
 
 
@@ -129,19 +130,78 @@ outline: none;
 .conversation-div{
     width: inherit;
     height:inherit ;
-    overflow-y: scroll;
+    overflow-y: scroll !important;
 }
-
+.conversation-div-ul {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 0 5%;
+    width: 100%;
+    margin: 72px auto;
+    list-style: none;
+}
+.conversation-div-ul li {   
+    max-width: 70%;
+    word-wrap: break-word;
+    width: fit-content;
+    padding: 10px 10px 6px 10px;
+    font-size: 14px;
+    margin-top:5px;
+    display: flex;
+    /* flex-direction: column-reverse; */
+ 
+}
+   
 .frnd{
-    background-color: red !important;
-    
+    /* background-color: red !important; */
+    background-color: #FFFFFF !important;
+    border-radius: 5px;
+
 }
 .myme{
-    background-color: yellow !important;
+    background-color:#D9FDD3 !important;
     margin-left: auto;
     display: flex;
     flex-direction: row-reverse;
-    margin-right: 50px;
+    border-radius: 5px;
+
+} 
+.logout_wrapper{
+    display: none;
 
 }
+.show{
+    display: block;
+}
+.logout_wrapper.show {
+    position: absolute;
+    top: 62px;
+    right: 10px;
+    background: #fff;
+    padding: 20px;
+}
+.logout_wrapper ul li{
+    list-style-type: none;
+    
+}
+/* .logout-portion{
+    position: absolute;
+    cursor: pointer;
+} */
+#menu-l{
+    cursor: pointer;
+}
+
+
+.hide-menu{
+    display: none !important;
+}
+@media only screen and (max-width: 767px) {
+    .hide-menu{
+      display: block !important;
+    }
+    .col-hide-res{
+        display: none;
+    }
+  }
 
